--- a/po/pt/proposals_discussion.po
+++ b/po/pt/proposals_discussion.po
@@ -1,59 +1,112 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: 1.0-561-gb092f43\n"
-"POT-Creation-Date: 2015-02-12 09:49-0300\n"
+"Project-Id-Version: 1.1-2267-gd7d222b\n"
+"POT-Creation-Date: 2015-06-05 08:42-0300\n"
 "PO-Revision-Date: 2015-02-12 09:49-0300\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 
-#: plugins/proposals_discussion/controllers/profile/proposals_discussion_plugin_profile_controller.rb:13
-msgid "You are not allowed to export data from this article"
-msgstr "Você não tem permissão para exportar dados deste artigo"
-
 #: plugins/proposals_discussion/controllers/myprofile/proposals_discussion_plugin_myprofile_controller.rb:11
 msgid "Please select a topic"
 msgstr "Favor selecionar um tópico"
 
-#: plugins/proposals_discussion/controllers/myprofile/proposals_discussion_plugin_myprofile_controller.rb:20
+#: plugins/proposals_discussion/controllers/myprofile/proposals_discussion_plugin_myprofile_controller.rb:28
 msgid "Proposal published!"
 msgstr "Proposta publicada!"
 
-#: plugins/proposals_discussion/controllers/myprofile/proposals_discussion_plugin_myprofile_controller.rb:22
+#: plugins/proposals_discussion/controllers/myprofile/proposals_discussion_plugin_myprofile_controller.rb:30
 msgid "Failed to publish your proposal."
 msgstr "Falha na publicação da proposta."
 
+#: plugins/proposals_discussion/controllers/proposals_discussion_plugin_admin_controller.rb:8
+msgid "Settings succefully saved."
+msgstr "Configurações salvas com sucesso."
+
+#: plugins/proposals_discussion/controllers/profile/proposals_discussion_plugin_profile_controller.rb:13
+msgid "You are not allowed to export data from this article"
+msgstr "Você não tem permissão para exportar dados deste artigo"
+
 #: plugins/proposals_discussion/lib/proposals_discussion_plugin.rb:8
-msgid "Provide a structured way to promove a discussion over ideas proposed by users."
-msgstr "Proporcinar uma forma estruturada de promover discussões sobre ideias propostas por usuários."
+msgid ""
+"Provide a structured way to promove a discussion over ideas proposed by "
+"users."
+msgstr ""
+"Proporcinar uma forma estruturada de promover discussões sobre ideias "
+"propostas por usuários."
 
-#: plugins/proposals_discussion/lib/proposals_discussion_plugin/topic.rb:14
-msgid "Discussion topic"
-msgstr "Tópico de discussão"
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/proposal_task.rb:57
+msgid "New proposal"
+msgstr "Nova Proposta"
 
-#: plugins/proposals_discussion/lib/proposals_discussion_plugin/topic.rb:18
-msgid "Container for proposals."
-msgstr "Container para propostas"
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/proposal_task.rb:70
+msgid "%{requestor} wants to send the following proposal. <br/>%{abstract}"
+msgstr "%{requestor} quer enviar a seguinte proposta. <br/>%{abstract}"
 
-#: plugins/proposals_discussion/lib/proposals_discussion_plugin/proposal.rb:9
-#: plugins/proposals_discussion/lib/proposals_discussion_plugin/proposal.rb:13
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/proposal_task.rb:82
+msgid "%{requestor} wants to send a proposal."
+msgstr "%{requestor} quer enviar a proposta"
+
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/proposal_task.rb:87
+msgid ""
+"You will need login to %{system} in order to accept or reject the proposal "
+"sent by %{requestor}"
+msgstr ""
+"Você precisará logar em %{system} a fim de aceitar ou rejeitar a proposta "
+"enviada por %{requestor}"
+
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/proposal_task.rb:167
+msgid ""
+"Your request for publishing the proposal \"%{article}\" was approved. Here "
+"is the comment left by the admin who approved your proposal:\n"
+"\n"
+"%{comment} "
+msgstr ""
+"Sua requisição para publicar a proposta \"%{article}\" foi aprovada. Aqui "
+"está o comentário deixado pelo administrador que aprovou sua proposta:\n"
+"\n"
+"%{comment} "
+
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/proposal_task.rb:169
+msgid "Your request for publishing the proposal \"%{article}\" was approved."
+msgstr "Sua requisição para publicar a proposta \"%{article}\" foi aprovada."
+
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/proposal_task.rb:174
+msgid "Your request for publishing the proposal \"%{article}\" was rejected."
+msgstr "Sua requisição para publicar a proposta \"%{article}\" foi rejeitada."
+
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/proposal_task.rb:176
+msgid ""
+"Here is the reject explanation left by the moderator who rejected your "
+"proposal: \n"
+"\n"
+"%{reject_explanation}"
+msgstr ""
+"Aqui está a explicação deixada pelo moderador que rejeitou sua "
+"proposta: \n"
+"\n"
+"%{reject_explanation}"
+
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/story.rb:6
+msgid "Story"
+msgstr "Experiência"
+
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/story.rb:10
+msgid "Discussion Story"
+msgstr "Discussão da Experiência"
+
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/proposal.rb:11
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/proposal.rb:15
 msgid "Proposal"
 msgstr "Proposta"
 
-#: plugins/proposals_discussion/lib/proposals_discussion_plugin/discussion.rb:9
-msgid "Body"
-msgstr "Corpo"
-
-#: plugins/proposals_discussion/lib/proposals_discussion_plugin/discussion.rb:14
-msgid "Discussion"
-msgstr "Discussão"
-
-#: plugins/proposals_discussion/lib/proposals_discussion_plugin/discussion.rb:18
-msgid "Container for topics."
-msgstr "Container para tópicos."
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/proposal.rb:23
+msgid "Can't create a proposal at this phase."
+msgstr "Não pode criar a proposta nesta fase"
 
 #: plugins/proposals_discussion/lib/proposals_discussion_plugin/proposals_list_helper.rb:4
 msgid "Random"
@@ -75,90 +128,82 @@ msgstr "Mais comentadas"
 msgid "Most Recently Commented"
 msgstr "Mais comentadas recentemente"
 
-#: plugins/proposals_discussion/views/proposals_discussion_plugin_myprofile/select_topic.html.erb:16
-msgid "Select topic"
-msgstr "Selecione um tópico"
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/topic.rb:12
+msgid "Discussion topic"
+msgstr "Tópico de discussão"
 
-#: plugins/proposals_discussion/views/proposals_discussion_plugin_myprofile/select_topic.html.erb:35
-msgid "Next"
-msgstr "Próximo"
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/topic.rb:16
+msgid "Container for proposals."
+msgstr "Container para propostas"
 
-#: plugins/proposals_discussion/views/proposals_discussion_plugin_myprofile/select_topic.html.erb:36
-msgid "Cancel"
-msgstr "Cancelar"
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/discussion.rb:18
+msgid "Body"
+msgstr "Corpo"
 
-#: plugins/proposals_discussion/views/cms/proposals_discussion_plugin/_proposal.html.erb:17
-msgid "Title"
-msgstr "Título"
-
-#: plugins/proposals_discussion/views/cms/proposals_discussion_plugin/_proposal.html.erb:21
-msgid "Abstract"
-msgstr "Resumo"
-
-#: plugins/proposals_discussion/views/cms/proposals_discussion_plugin/_topic.html.erb:10
-#: plugins/proposals_discussion/views/cms/proposals_discussion_plugin/_discussion.html.erb:7
-msgid "Description:"
-msgstr "Descrição:"
-
-#: plugins/proposals_discussion/views/cms/proposals_discussion_plugin/_topic.html.erb:12
-msgid "Color:"
-msgstr "Cor:"
-
-#: plugins/proposals_discussion/views/cms/proposals_discussion_plugin/_topic.html.erb:16
-msgid "Image:"
-msgstr "Imagem:"
-
-#: plugins/proposals_discussion/views/cms/proposals_discussion_plugin/_topic.html.erb:17
-msgid "Max size: %s (.jpg, .gif, .png)"
-msgstr "Tamanho máximo: %s (.jpg, .gif, .png)"
-
-#: plugins/proposals_discussion/views/content_viewer/_proposals_list_content.html.erb:6
-msgid "More"
-msgstr "Mais"
-
-#: plugins/proposals_discussion/views/content_viewer/topic.html.erb:20
-msgid "Statistics"
-msgstr "Estatísticas"
-
-#: plugins/proposals_discussion/views/content_viewer/topic.html.erb:26
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/discussion.rb:25
+#: plugins/proposals_discussion/views/content_viewer/_statistics.html.erb:8
 msgid "Proposals"
 msgstr "Propostas"
 
-#: plugins/proposals_discussion/views/content_viewer/topic.html.erb:26
-msgid "Comments"
-msgstr "Comentários"
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/discussion.rb:28
+msgid "Discussion"
+msgstr "Discussão"
 
-#: plugins/proposals_discussion/views/content_viewer/topic.html.erb:30
-msgid "Number of Proposals: "
-msgstr "Quantidade de Propostas: "
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/discussion.rb:32
+msgid "Container for topics."
+msgstr "Container para tópicos."
 
-#: plugins/proposals_discussion/views/content_viewer/topic.html.erb:34
-msgid "Number of Participants: "
-msgstr "Quantidade de Participantes: "
+#: plugins/proposals_discussion/lib/proposals_discussion_plugin/discussion_helper.rb:12
+msgid "Send your proposal!"
+msgstr "Envie sua proposta!"
 
-#: plugins/proposals_discussion/views/content_viewer/topic.html.erb:38
-msgid "Number of Comments: "
-msgstr "Quantidade de Comentários: "
+#: plugins/proposals_discussion/lib/ext/vote.rb:10
+msgid "Can't vote in this discussion anymore."
+msgstr ""
 
-#: plugins/proposals_discussion/views/content_viewer/topic.html.erb:42
-msgid "Most active: "
-msgstr "Mais ativos: "
-
-#: plugins/proposals_discussion/views/content_viewer/topic.html.erb:57
-msgid "Send your proposal"
-msgstr "Envie sua proposta"
-
-#: plugins/proposals_discussion/views/content_viewer/discussion.html.erb:12
+#: plugins/proposals_discussion/views/content_viewer/discussion_topics.html.erb:11
 msgid "New Topic"
 msgstr "Novo Tópico"
 
+#: plugins/proposals_discussion/views/content_viewer/discussion_topics.html.erb:14
 #: plugins/proposals_discussion/views/content_viewer/discussion.html.erb:15
 msgid "Export"
 msgstr "Exportar"
 
-#: plugins/proposals_discussion/views/content_viewer/discussion.html.erb:24
-msgid "Send your proposal!"
-msgstr "Envie sua proposta!"
+#: plugins/proposals_discussion/views/content_viewer/_statistics.html.erb:2
+msgid "Statistics"
+msgstr "Estatísticas"
+
+#: plugins/proposals_discussion/views/content_viewer/_statistics.html.erb:8
+msgid "Comments"
+msgstr "Comentários"
+
+#: plugins/proposals_discussion/views/content_viewer/_statistics.html.erb:12
+msgid "Number of Proposals: "
+msgstr "Quantidade de Propostas: "
+
+#: plugins/proposals_discussion/views/content_viewer/_statistics.html.erb:16
+msgid "Number of Participants: "
+msgstr "Quantidade de Participantes: "
+
+#: plugins/proposals_discussion/views/content_viewer/_statistics.html.erb:20
+msgid "Number of Comments: "
+msgstr "Quantidade de Comentários: "
+
+#: plugins/proposals_discussion/views/content_viewer/_statistics.html.erb:24
+msgid "Most active: "
+msgstr "Mais ativos: "
+
+#: plugins/proposals_discussion/views/content_viewer/_proposal_card.html.erb:17
+#: plugins/proposals_discussion/views/content_viewer/proposal.html.erb:26
+msgid "Publish"
+msgstr "Publicar"
+
+#: plugins/proposals_discussion/views/content_viewer/_proposal_card.html.erb:34
+msgid "%s comment"
+msgid_plural "%s comments"
+msgstr[0] "%s comentário"
+msgstr[1] "%s comentários"
 
 #: plugins/proposals_discussion/views/content_viewer/proposal.html.erb:3
 msgid ", by %s"
@@ -166,13 +211,89 @@ msgstr ", por %s"
 
 #: plugins/proposals_discussion/views/content_viewer/proposal.html.erb:4
 msgid " - %s"
-msgstr ""
+msgstr "- %s"
 
-#: plugins/proposals_discussion/views/content_viewer/proposal.html.erb:28
-#: plugins/proposals_discussion/views/content_viewer/_proposal_card.html.erb:20
-msgid "Publish"
-msgstr "Publicar"
+#: plugins/proposals_discussion/views/content_viewer/_proposals_list_content.html.erb:6
+msgid "More"
+msgstr "Mais"
 
 #: plugins/proposals_discussion/views/content_viewer/_proposals_list.html.erb:23
 msgid "Loading..."
 msgstr "Carregando..."
+
+#: plugins/proposals_discussion/views/content_viewer/topic.html.erb:27
+msgid "Send your proposal"
+msgstr "Envie sua proposta"
+
+#: plugins/proposals_discussion/views/tasks/proposals_discussion_plugin/_proposal_task_accept_details.html.erb:1
+msgid "Select the folder where the article must be published"
+msgstr "Selecione a pasta onde o artigo será publicado"
+
+#: plugins/proposals_discussion/views/tasks/proposals_discussion_plugin/_proposal_task_accept_details.html.erb:3
+msgid "Comment for author"
+msgstr "Comentário para o autor"
+
+#: plugins/proposals_discussion/views/proposals_discussion_plugin_myprofile/select_topic.html.erb:16
+msgid "Select topic"
+msgstr "Selecione um tópico"
+
+#: plugins/proposals_discussion/views/proposals_discussion_plugin_myprofile/select_topic.html.erb:33
+msgid "Next"
+msgstr "Próximo"
+
+#: plugins/proposals_discussion/views/proposals_discussion_plugin_myprofile/select_topic.html.erb:34
+msgid "Cancel"
+msgstr "Cancelar"
+
+#: plugins/proposals_discussion/views/proposals_discussion_plugin_admin/index.html.erb:1
+msgid "Proposals Discussion settings"
+msgstr "Configurações da Discussão de Propostas"
+
+#: plugins/proposals_discussion/views/proposals_discussion_plugin_admin/index.html.erb:15
+msgid "Proposal Discussion"
+msgstr "Discussão de Proposta"
+
+#: plugins/proposals_discussion/views/proposals_discussion_plugin_admin/index.html.erb:20
+msgid "Host:"
+msgstr "Endereço:"
+
+#: plugins/proposals_discussion/views/proposals_discussion_plugin_admin/index.html.erb:21
+msgid "Private key:"
+msgstr "Chave Privada"
+
+#: plugins/proposals_discussion/views/proposals_discussion_plugin_admin/index.html.erb:25
+msgid "New Host"
+msgstr "Novo Endereço"
+
+#: plugins/proposals_discussion/views/cms/proposals_discussion_plugin/_topic.html.erb:14
+msgid "Color:"
+msgstr "Cor:"
+
+#: plugins/proposals_discussion/views/cms/proposals_discussion_plugin/_proposal.html.erb:15
+msgid "Title"
+msgstr "Título"
+
+#: plugins/proposals_discussion/views/cms/proposals_discussion_plugin/_proposal.html.erb:19
+msgid "Abstract"
+msgstr "Resumo"
+
+#: plugins/proposals_discussion/views/cms/proposals_discussion_plugin/_discussion.html.erb:12
+msgid "Current Phase"
+msgstr "Fase Corrente"
+
+#: plugins/proposals_discussion/views/cms/proposals_discussion_plugin/_discussion.html.erb:13
+msgid "Allow topics"
+msgstr "Permitir tópicos"
+
+#: plugins/proposals_discussion/views/cms/proposals_discussion_plugin/_discussion.html.erb:14
+msgid "Moderate proposals"
+msgstr "Moderar propostas"
+
+#~ msgid "Description:"
+#~ msgstr "Descrição:"
+
+#~ msgid "Image:"
+#~ msgstr "Imagem:"
+
+#~ msgid "Max size: %s (.jpg, .gif, .png)"
+#~ msgstr "Tamanho máximo: %s (.jpg, .gif, .png)"
