--- a/po/proposals_discussion.pot
+++ b/po/proposals_discussion.pot
@@ -413,3 +413,19 @@ msgstr ""
 #: plugins/proposals_discussion/views/proposals_discussion_plugin_tasks/_task.html.erb:3
 msgid "Source"
 msgstr ""
+
+#: plugins/proposals_discussion/views/tasks/processed.html.erb:67
+msgid "Evaluator"
+msgstr ""
+
+#: plugins/proposals_discussion/views/tasks/processed.html.erb:71
+msgid "Evaluator at"
+msgstr "Validado em"
+
+#: plugins/proposals_discussion/views/tasks/processed.html.erb:71
+msgid "Moderator"
+msgstr "Validador"
+
+#: plugins/proposals_discussion/views/tasks/processed.html.erb:61
+msgid "Moderator at"
+msgstr "Moderado em"
